modified:   .github/workflows/pypi-publish.yml

--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -22,9 +22,8 @@ jobs:
           CIBW_ARCHS_LINUX: "x86_64"
           CIBW_ARCHS_MACOS: "x86_64"
           CIBW_SKIP: "pp* *-musllinux_*"
-          CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
-          CIBW_REPAIR_WHEEL_COMMAND_LINUX: "auditwheel repair -w {dest_dir} {wheel}"
-          CIBW_REPAIR_WHEEL_COMMAND_MACOS: "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
+          CIBW_ENVIRONMENT: "QOKIT_PYTHON_ONLY=1"
+          CIBW_BUILD_VERBOSITY: 1
       - uses: actions/upload-artifact@v4
         with:
           name: wheels-${{ matrix.os }}
@@ -39,7 +38,7 @@ jobs:
         run: pipx run build --sdist
       - uses: actions/upload-artifact@v4
         with:
-          name: dist-${{ matrix.python }} - ${{matrix.os}}
+          name: sdist
           path: dist/*.tar.gz  
 
   upload_pypi:
@@ -52,8 +51,9 @@ jobs:
     steps:
       - uses: actions/download-artifact@v4.1.7
         with:
-          name: artifact
+          pattern: '*'
           path: dist
+          merge-multiple: true
       - uses: pypa/gh-action-pypi-publish@release/v1      
         with:
           user: __token__
