--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -7,26 +7,34 @@ on:
 
 jobs:
   build_wheels:
-    name: Build wheels on ${{ matrix.os }}
+    name: Build wheels on ${{ matrix.python }} - ${{matrix.os}}
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        include:
+          - os: ubuntu-latest
+            python: "cp311"
+            cibw_platform: linux
+          - os: macos-latest
+            python: "cp311"
+            cibw_platform: macos
 
     steps:
       - uses: actions/checkout@v4
       - name: Build Wheels
-        uses: pypa/cibuildwheel@v2.16.5
+        uses: pypa/cibuildwheel@v3.1.3
         env:
-          CIBW_BUILD: "cp310-* cp311-*"
-          CIBW_ARCHS_LINUX: "x86_64"
-          CIBW_ARCHS_MACOS: "x86_64"
-          CIBW_SKIP: "pp* *-musllinux_*"
-          CIBW_ENVIRONMENT: "QOKIT_PYTHON_ONLY=1"
-          CIBW_BUILD_VERBOSITY: 1
+          CIBW_BUILD_FRONTEND: "build"
+          CIBW_PLATFORM: ${{ matrix.cibw_platform }}
+          CIBW_ARCHS: "x86_64"
+          CIBW_SKIP: "pp*"
+          CIBW_REPAIR_WHEEL_COMMAND_MACOS: "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel} || cp {wheel} {dest_dir}"
+          CIBW_REPAIR_WHEEL_COMMAND_LINUX: "auditwheel repair -w {dest_dir} {wheel} || cp {wheel} {dest_dir}"
+        with:
+          output-dir: wheelhouse
       - uses: actions/upload-artifact@v4
         with:
-          name: wheels-${{ matrix.os }}
+          name: wheels-${{ matrix.python }}-${{ matrix.os }}
           path: wheelhouse/*.whl
 
   build_sdist:        
@@ -51,7 +59,6 @@ jobs:
     steps:
       - uses: actions/download-artifact@v4.1.7
         with:
-          pattern: '*'
           path: dist
           merge-multiple: true
       - uses: pypa/gh-action-pypi-publish@release/v1      
