--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -7,22 +7,16 @@ on:
 
 jobs:
   build_wheels:
-    name: Build wheels on ${{ matrix.python }} - ${{matrix.os}}
+    name: Build wheels on ${{ matrix.os }}
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        include:
-          - os: ubuntu-latest
-            python: "cp311"
-            cibw_platform: linux
-          - os: macos-latest
-            python: "cp311"
-            cibw_platform: macos
+        os: [ubuntu-latest, macos-latest]
 
     steps:
       - uses: actions/checkout@v4
       - name: Build Wheels
-        uses: pypa/cibuildwheel@v3.1.3
+        uses: pypa/cibuildwheel@v2.16.5
         env:
           CIBW_BUILD_FRONTEND: "build"
           CIBW_PLATFORM: ${{ matrix.cibw_platform }}
@@ -34,7 +28,7 @@ jobs:
           output-dir: wheelhouse
       - uses: actions/upload-artifact@v4
         with:
-          name: wheels-${{ matrix.python }}-${{ matrix.os }}
+          name: wheels-${{ matrix.os }}
           path: wheelhouse/*.whl
 
   build_sdist:        
@@ -59,6 +53,7 @@ jobs:
     steps:
       - uses: actions/download-artifact@v4.1.7
         with:
+          pattern: '*'
           path: dist
           merge-multiple: true
       - uses: pypa/gh-action-pypi-publish@release/v1      
