--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -24,8 +24,7 @@ jobs:
           CIBW_SKIP: "pp* *-musllinux_*"
           CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
           CIBW_BUILD_VERBOSITY: 1
-          CIBW_REPAIR_WHEEL_COMMAND_MACOS: "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel} || cp {wheel} {dest_dir}"
-          CIBW_REPAIR_WHEEL_COMMAND_LINUX: "auditwheel repair -w {dest_dir} {wheel} || cp {wheel} {dest_dir}"
+          CIBW_REPAIR_WHEEL_COMMAND_MACOS: "echo 'Skipping macOS wheel repair' && cp {wheel} {dest_dir}"
       - uses: actions/upload-artifact@v4
         with:
           name: wheels-${{ matrix.os }}
